--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Simon's Personal site</title>
   </head>
   <body>
-    <table>
+    <table cellspacing="20" cellpadding="">
       <tr>
         <td>
           <img
@@ -32,7 +33,7 @@
     <hr />
     <h3>Education</h3>
 
-    <table>
+    <table cellspacing="20">
       <tr>
         <td>2019</td>
         <td><a href="https://codeclan.com/">CodeClan</a></td>
@@ -68,7 +69,7 @@
     </table>
     <hr />
     <h3>Work Experience</h3>
-    <table>
+    <table cellspacing="20">
       <tr>
         <td>Oct 2019 - Present</td>
         <td>Opportunity Search</td>
@@ -114,7 +115,7 @@
     </table>
     <hr />
     <h3>Skills</h3>
-    <table>
+    <table cellspacing="20" cellpadding="">
       <tr>
         <td>
           <table>
@@ -175,14 +176,14 @@
       </tr>
     </table>
     <hr />
-    <h3>My Hobbies</h3>
-    <ul>
-      <li>Surfing</li>
-      <li>Skiing</li>
-      <li>Coding</li>
-      <li>Hiking</li>
-      <li>Cooking</li>
-      <li>Travelling</li>
-    </ul>
+
+    <table>
+      <tr>
+        <td><a href="index.html">Home</a></td>
+        <td><a href="https://linkedin.com/in/simonshhall">LinkedIn</a></td>
+        <td><a href="hobbies.html">Hobbies</a></td>
+        <td><a href="contact.html">Contact</a></td>
+      </tr>
+    </table>
   </body>
 </html>
