added contact me form

--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
     <h3>My Hobbies</h3>
     <ul>
       <li>Surfing</li>
-      <li>Skiing</li>
+      <li>Guitar</li>
       <li>Coding</li>
       <li>Hiking</li>
       <li>Cooking</li>
