--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <td>
           <h1>Simon Hall</h1>
           <p>
-            <em>Recruiter & Coder of</em> <strong>Opportunity Search.</strong>
+            <em>Volunteer Coder - </em> <strong>Opportunity Search.</strong>
           </p>
           <p>
-            I am an IOS Developer and seasoned Recruiter. I love surfing, skiing
-            and coding.
+            I am an IOS Developer and seasoned Recruiter. I love surfing,
+            playing guitar and coding.
           </p>
         </td>
       </tr>
@@ -38,7 +38,7 @@
         <td>2019</td>
         <td><a href="https://codeclan.com/">CodeClan</a></td>
         <td>
-          SQA Level 8 (HND Equivalent) Certificate in Proffessional Software
+          SQA Level 8 Certificate (HND Equivalent) Proffessional Software
           Development
         </td>
       </tr>
@@ -79,38 +79,48 @@
         <td>May 2019 - Sep 2019</td>
         <td>CodeClan Digital Skills Academy</td>
         <td>
-          Student Level 8 SQA (HND equivalent) Professional Software Development
+          Student Level 8 SQA Certificate (HND equivalent) Professional Software
+          Development
         </td>
       </tr>
       <tr>
         <td>Jul 2018 - May 2019</td>
         <td>Moray Search & Selection</td>
-        <td>Recruitment Consultant</td>
+        <td>Recruitment Consultant Technology</td>
       </tr>
       <tr>
         <td>Jan 2013 - Jun 2017</td>
         <td>S&P Global</td>
-        <td>Recruitment Consultant</td>
+        <td>Executive Recruiter EMEA</td>
       </tr>
       <tr>
         <td>Jan 2010 - May 2012</td>
         <td>The Eastlands Partnership</td>
-        <td>Recruitment Consultant</td>
+        <td>
+          Recruitment Consultant Financial Services Financial Officers &
+          Infrastructure
+        </td>
       </tr>
       <tr>
         <td>Jun 2008 - May 2009</td>
         <td>Hanover Search</td>
-        <td>Recruitment Consultant</td>
+        <td>
+          Recruitment Consultant Financial Services Financial Officers & Wealth
+          Management
+        </td>
       </tr>
       <tr>
         <td>Aug 2003 - March 2008</td>
         <td>Fleet Search & Selection</td>
-        <td>Recruitment Consultant & Head of Research</td>
+        <td>
+          Recruitment Consultant Financial Services Financial Officers & Head of
+          Research
+        </td>
       </tr>
       <tr>
         <td>Aug 1999 - Jul 2002</td>
         <td>Harvey Nash</td>
-        <td>Research Executive</td>
+        <td>Research Executive Technology Executive Search</td>
       </tr>
     </table>
     <hr />
@@ -118,7 +128,7 @@
     <table cellspacing="20" cellpadding="">
       <tr>
         <td>
-          <table>
+          <table cellspacing="20" cellpadding="">
             <tr>
               <td>Recruiting</td>
               <td>⭐️⭐️⭐️⭐️⭐️</td>
@@ -146,7 +156,7 @@
           </table>
         </td>
         <td>
-          <table>
+          <table cellspacing="20" cellpadding="">
             <tr>
               <td>Coding</td>
               <td>⭐️⭐️⭐️</td>
@@ -177,7 +187,7 @@
     </table>
     <hr />
 
-    <table>
+    <table cellspacing="20" cellpadding="">
       <tr>
         <td><a href="index.html">Home</a></td>
         <td><a href="https://linkedin.com/in/simonshhall">LinkedIn</a></td>
