--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contact Me</title>
   </head>
   <body>
+    <h3>Contact Me</h3>
+
+    <form
+      action="mailto:shwaldemar@gmail.com"
+      method="post"
+      enctype="text/plain"
+    >
+      <label for="YourName">Your Name:</label>
+      <br />
+      <input type="text" name="YourName" />
+      <br />
+      <label for="YourEmail">Your Emaìl:</label>
+      <br />
+      <input type="email" name="YourEmail" />
+      <br />
+      <label for="YourTel">Your Telephone:</label>
+      <br />
+      <input type="text" name="YourTel" />
+      <br />
+      <label for="YourMessage">Your Message:</label>
+      <br />
+      <textarea name="YourMessage" id="" cols="30" rows="10"></textarea>
+      <br />
+      <input type="submit" />
+      <hr />
+    </form>
     <table>
       <tr>
         <td><a href="index.html">Home</a></td>
