--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Contact Me</title>
+    <style></style>
   </head>
   <body>
     <h3>Contact Me</h3>
